# blender

./: CMakeLists.txt
build_files/build_environment/: CMakeLists.txt  install_deps.sh
build_files/build_environment/cmake/: embree.cmake  gmp.cmake  harvest.cmake  openxr.cmake  pugixml.cmake  versions.cmake
build_files/build_environment/patches/: cmakelists_tbb.txt
build_files/buildbot-lts/: README.md
build_files/buildbot-lts/docker/: Dockerfile  buildbot.tac  docker-compose.yml  docker-entrypoint.sh  master.cfg
build_files/buildbot/codesign/: base_code_signer.py
build_files/cmake/: macros.cmake
build_files/cmake/Modules/: FindEmbree.cmake  FindGMP.cmake  FindOpenXR-SDK.cmake  GTestTesting.cmake
build_files/cmake/config/: blender_full.cmake  blender_lite.cmake  blender_release.cmake
build_files/cmake/platform/: platform_apple.cmake  platform_unix.cmake  platform_win32.cmake
build_files/utils/: make_update.py
intern/: CMakeLists.txt
intern/clog/: CLG_log.h  CMakeLists.txt  clog.c
intern/cycles/blender/: blender_python.cpp  blender_sync.cpp
intern/cycles/bvh/: bvh_build.cpp  bvh_embree.cpp
intern/cycles/device/: device.cpp  (+3 more)
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_IContext.h  GHOST_ISystem.h  GHOST_IWindow.h  GHOST_IXrContext.h  GHOST_Types.h
intern/opencolorio/: fallback_impl.cc  gpu_shader_display_transform.glsl  ocio_capi.cc  ocio_capi.h  ocio_impl.cc  ocio_impl.h  ocio_impl_glsl.cc
intern/opensubdiv/: opensubdiv_evaluator_capi.h
intern/softbody/: CMakeLists.txt  admmpd_api.cpp  admmpd_api.h
intern/tetgen/: tetgen_api.cpp
source/blender/: CMakeLists.txt
source/creator/: CMakeLists.txt  creator.c  creator_args.c  creator_signals.c
tests/: CMakeLists.txt
tests/gtests/blenlib/: BLI_boolean_test.cc  BLI_delaunay_2d_test.cc  BLI_ghash_performance_test.cc  BLI_map_test.cc  BLI_mesh_intersect_test.cc  BLI_path_util_test.cc  BLI_polyfill_2d_test.cc  CMakeLists.txt
tests/gtests/blenloader/: blendfile_loading_base_test.cc
tests/performance/: benchmark
tests/performance/api/: __init__.py  device.py  environment.py  queue.py  test.py
tests/performance/tests/: animation.py  cycles.py  undo.py
tests/python/: CMakeLists.txt  bevel_operator.py  boolean_operator.py  cycles_render_tests.py  deform_modifiers.py  eevee_render_tests.py  modifiers.py  opengl_draw_tests.py  operators.py  physics_cloth.py  physics_dynamic_paint.py  physics_fluid.py  physics_ocean.py  physics_particle_instance.py  physics_particle_system.py  physics_softbody.py  usd_export_test.py  workbench_render_tests.py
tests/python/collada/: CMakeLists.txt
tests/python/modules/: mesh_test.py  test_object_generator.py  test_utils.py
tests/python/view_layer/: CMakeLists.txt
(+1591 files in other folders)
